--- a/Day 1/index1.html
+++ b/Day 1/index1.html
@@ -13,9 +13,20 @@
     <h6>Welcome to Pepcoding</h6>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat tempore, vero? Cumque dicta necessitatibus voluptatem? Delectus dignissimos, eligendi hic necessitatibus optio quaerat reiciendis repellendus! Adipisci dolores fugit nesciunt odio sunt.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid assumenda beatae culpa eos eum eveniet
-        explicabo fugiat ipsum necessitatibus nesciunt nihil nostrum odit placeat provident quas reiciendis sit totam,
-        voluptates.</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat tempore, vero? Cumque dicta necessitatibus voluptatem? Delectus dignissimos, eligendi hic necessitatibus optio quaerat reiciendis repellendus! Adipisci dolores fugit nesciunt odio sunt.</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat tempore, vero? Cumque dicta necessitatibus voluptatem? Delectus dignissimos, eligendi hic necessitatibus optio quaerat reiciendis repellendus! Adipisci dolores fugit nesciunt odio sunt.</p>
+
+    <div>
+        <h1>Div 1</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet doloribus ea ipsam nihil odio rerum voluptatem, voluptatibus! Accusantium aliquam corporis eaque fuga in, nam natus neque non officiis quam, voluptate.</p>
+    </div>
+
+    <div>
+        <h1>Div 2</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet doloribus ea ipsam nihil odio rerum voluptatem, voluptatibus! Accusantium aliquam corporis eaque fuga in, nam natus neque non officiis quam, voluptate.</p>
+    </div>
 
 </body>
 </html>
