--- a/Day 1/index1.html
+++ b/Day 1/index1.html
@@ -28,5 +28,30 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet doloribus ea ipsam nihil odio rerum voluptatem, voluptatibus! Accusantium aliquam corporis eaque fuga in, nam natus neque non officiis quam, voluptate.</p>
     </div>
 
+    <!--    List Tag-->
+    <!--Unordered List-->
+    <h3>Grocery Shopping List</h3>
+    <ul>
+        <li>Onion</li>
+        <li>Tomatoes</li>
+        <li>Cheese</li>
+    </ul>
+    <!--Ordered List-->
+    <h3>Grocery Shopping List New</h3>
+    <ol>
+        <li>Oil</li>
+        <li>Cabbage</li>
+        <li>Chips</li>
+    </ol>
+
+    <!--Span Tag-->
+    <p>In order to make this course a <span style = "color:green;">success</span> we need to have <span style = "color : red;">faith</span> in each other</p>
+
+    <p>In order to make this course a <span style = "color : green;">success we need to have faith in each other</span></p>
+
+    <!--Anchor tag-->
+    <a href = "https://www.google.com/">Go to Google</a>
+    <a href = "index1.html">Get Started</a>
+
 </body>
 </html>
