--- a/Day 1/index1.html
+++ b/Day 1/index1.html
@@ -52,6 +52,7 @@
     <!--Anchor tag-->
     <a href = "https://www.google.com/">Go to Google</a>
     <a href = "index1.html">Get Started</a>
+    <a href = "index1.html">Get Started</a>
 
 </body>
 </html>
