--- a/Day 1/index1.html
+++ b/Day 1/index1.html
@@ -50,8 +50,29 @@
     <p>In order to make this course a <span style = "color : green;">success we need to have faith in each other</span></p>
 
     <!--Anchor tag-->
-    <a href = "https://www.google.com/">Go to Google</a>
+    <div>
+        <a href = "https://www.google.com/">Go to Google</a>
+    </div>
+    <div>
+        <a href = "index1.html">Get Started</a>
+    </div>
+    <p>
+        <a href = "RedirectTry.html" target = "_blank">Get Started with RedirectedTry</a>
+    </p>
+
+    <!--Break Tag-->
     <a href = "index1.html">Get Started</a>
+    <br>
+    <a href = "RedirectTry.html">Get Started with RedirectedTry</a>
+    <br>
+
+    <!--Image Tag-->
+     <img src = "https://images.unsplash.com/photo-1471879832106-c7ab9e0cee23?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=500&q=20">
+
+    <img src = "download.jpg">
+
+    <img src = "https://encrypted-tbn0.gstatic" alt = "Valley">
+
 
 </body>
 </html>
