--- a/Day 1/Table.html
+++ b/Day 1/Table.html
@@ -13,6 +13,28 @@
                 <th>Education</th>
             </tr>
         </thead>
+        <tbody>
+            <tr>
+                <td>Prachi</td>
+                <td>10</td>
+                <td>Btech</td>
+            </tr>
+            <tr>
+                <td>Jatin</td>
+                <td>1</td>
+                <td>BCA</td>
+            </tr>
+            <tr>
+                <td>Disha</td>
+                <td>4</td>
+                <td>Mtech</td>
+            </tr>
+            <tr>
+                <td>Jack</td>
+                <td>6</td>
+                <td>Btech</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
