--- a/Day 1/Table.html
+++ b/Day 1/Table.html
@@ -22,7 +22,7 @@
             <tr>
                 <td>Jatin</td>
                 <td>1</td>
-                <td>BCA</td>
+<!--                <td>BCA</td>-->
             </tr>
             <tr>
                 <td>Disha</td>
