--- a/Day 2/TableExercise.html
+++ b/Day 2/TableExercise.html
@@ -7,12 +7,12 @@
 <body>
     <table>
         <thead>
-        <tr>
-            <th>Name</th>
-            <th>Roll Number</th>
-            <th>Branch</th>
-            <th>Percentage</th>
-        </tr>
+            <tr>
+                <th>Name</th>
+                <th>Roll Number</th>
+                <th>Branch</th>
+                <th>Percentage</th>
+            </tr>
         </thead>
         <tbody>
             <tr>
@@ -20,6 +20,18 @@
                 <td>9</td>
                 <td>It</td>
                 <td>99</td>
+            </tr>
+            <tr>
+                <td>Jatin</td>
+                <td>3</td>
+                <td>cse</td>
+                <td>89</td>
+            </tr>
+            <tr>
+                <td>Disha</td>
+                <td>19</td>
+                <td>ece</td>
+                <td>96</td>
             </tr>
         </tbody>
     </table>
