--- a/Day 2/TableExercise.html
+++ b/Day 2/TableExercise.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <table>
+        <caption>Time Table</caption>
         <thead>
             <tr>
                 <th>Name</th>
