--- a/Day 2/LearningCSS3.html
+++ b/Day 2/LearningCSS3.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href = "style.css">
+    <style>
+        h3 {
+            color : black;
+        }
+    </style>
 </head>
 <body>
-
+    <h3 style = "color : pink;">Grocery Shopping List</h3>
+    <ul>
+        <li>Onion</li>
+        <li>Tomatoes</li>
+        <li>Cheese</li>
+    </ul>
+    <!--Ordered List-->
+    <h3>Grocery Shopping List New</h3>
+    <ol>
+        <li>Oil</li>
+        <li>Cabbage</li>
+        <li>Chips</li>
+    </ol>
 </body>
 </html>
