--- a/Day 2/TableExercise2.html
+++ b/Day 2/TableExercise2.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-  <table>
+  <table border = "8">
       <thead>
             <tr>
                 <th></th>
