--- a/Day 3/selectors.html
+++ b/Day 3/selectors.html
@@ -24,8 +24,16 @@
         .colorChange.largetext {
             color : purple;
         }
+        /*Id selector*/
         #unique {
             color : purple;
+        }
+        /*Grouping selector*/
+        h3 , h4 , a{
+            color : black;
+        }
+        h3 ,a{
+            font-size: 30px;
         }
     </style>
 </head>
@@ -56,6 +64,11 @@
     <p class = "largetext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi debitis est expedita harum id inventore ipsam laborum, modi molestiae nesciunt, nobis numquam quo sit tempora voluptas voluptate? Amet, quod.</p>
 
     <p  class = "colorChange">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi debitis est expedita harum id inventore ipsam laborum, modi molestiae nesciunt, nobis numquam quo sit tempora voluptas voluptate? Amet, quod.</p>
+
+    <!--Grouping Selector-->
+    <h4>I am Prachi</h4>
+    <h3>I am Jatin</h3>
+    <a href = "https://www.google.com" target = "_blank">Google</a>;
 
 
 </body>
