--- a/SelectorQues/q2.html
+++ b/SelectorQues/q2.html
@@ -7,7 +7,12 @@
     <title>Document</title>
     <style>
         /* write code here  */
-        .color {
+        /*descenant selector*/
+        div ol li {
+            color : blue;
+        }
+        /*child selector*/
+        div ol {
             color : blue;
         }
     </style>
@@ -23,7 +28,7 @@
 </ol>
 
 <div>
-    <ol class = "color">
+    <ol>
         <li>Select</li>
         <li>Me</li>
     </ol>
