--- a/SelectorQues/q3.html
+++ b/SelectorQues/q3.html
@@ -7,8 +7,8 @@
   <title>Document</title>
   <style>
     /* write code here */
-    .blue {
-      color : blue;
+    div>h1>span {
+        color : blue;
     }
   </style>
 </head>
@@ -19,7 +19,7 @@
 
 <div>
   <h1>
-    <span class = "blue">I'm the direct son</span>
+    <span>I'm the direct son</span>
   </h1>
 </div>
 
