--- a/SelectorQues/q6.html
+++ b/SelectorQues/q6.html
@@ -10,6 +10,13 @@
         div div {
             color : blue;
         }
+        /*class selector and descendent selector*/
+        .c1 div {
+            color : blue;
+        }
+        .c1>div {
+            color : blue;
+        }
     </style>
 </head>
 
