--- a/SelectorQues/q7.html
+++ b/SelectorQues/q7.html
@@ -10,6 +10,9 @@
         div>p {
             color : blue;
         }
+        .c1 p {
+            color : blue;
+        }
     </style>
 </head>
 
