--- a/SelectorQues/q9.html
+++ b/SelectorQues/q9.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        div>div .c1.c2 {
+        #the-one>.c1.c2 {
             color : blue;
         }
     </style>
