--- a/Day4/attributeSelector.html
+++ b/Day4/attributeSelector.html
@@ -10,6 +10,9 @@
         a[href = "https://nados.io"] {
             color : yellow;
         }
+        p[class = "abc"] {
+            color : green;
+        }
     </style>
 </head>
 <body>
@@ -19,5 +22,6 @@
     <br>
     <a href = "https://netflix.com" target = "_blank" >Netflix</a>
     <br>
+    <p class = "abc" ><strong>Hiiiii</strong></p>
 </body>
 </html>
