--- a/Webpage 1st/index.html
+++ b/Webpage 1st/index.html
@@ -6,5 +6,44 @@
 </head>
 <body>
 
+    <!--First Part starts-->
+    <h1>DEV 101</h1>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+    </ul>
+    <!--First Part ends-->
+
+    <!--Second Part starts-->
+    <img src = "images/lab.jpg" alt = "blackboard coffee camera">
+    <!--Second Part end-->
+
+    <!--Third part starts-->
+    <div>
+        <div>
+            <img src = "images/html.png">
+            <h2>HTML</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consectetur, minus obcaecati optio quis soluta sunt! Ab delectus dolor ipsam laboriosam modi, nobis praesentium quam quasi quibusdam soluta ut voluptatum!</p>
+        </div>
+        <div>
+            <img src = "images/css.png">
+            <h2>CSS</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consectetur, minus obcaecati optio quis soluta sunt! Ab delectus dolor ipsam laboriosam modi, nobis praesentium quam quasi quibusdam soluta ut voluptatum!</p>
+        </div>
+        <div>
+            <img src = "images/js.png">
+            <h2>JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consectetur, minus obcaecati optio quis soluta sunt! Ab delectus dolor ipsam laboriosam modi, nobis praesentium quam quasi quibusdam soluta ut voluptatum!</p>
+        </div>
+    </div>
+    <!--Third part ends-->
+
+    <!--Forth part starts-->
+    <div>
+        <p>Pepcoding@2022</p>
+        <p>All rights reserved | Terms of Use | Privacy Policy</p>
+    </div>
+
 </body>
 </html>
