--- a/Webpage 1st/index.html
+++ b/Webpage 1st/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
 
@@ -16,7 +17,9 @@
     <!--First Part ends-->
 
     <!--Second Part starts-->
-    <img src = "images/lab.jpg" alt = "blackboard coffee camera">
+    <div class = "welcomeimage">
+        <img src = "images/lab.jpg" alt = "blackboard coffee camera">
+    </div>
     <!--Second Part end-->
 
     <!--Third part starts-->
@@ -40,8 +43,8 @@
     <!--Third part ends-->
 
     <!--Forth part starts-->
-    <div>
-        <p>Pepcoding@2022</p>
+    <div class = "footer">
+        <p>&copy Pepcoding@2022</p>
         <p>All rights reserved | Terms of Use | Privacy Policy</p>
     </div>
 
