--- a/Webpage 1st/index.html
+++ b/Webpage 1st/index.html
@@ -8,12 +8,16 @@
 <body>
 
     <!--First Part starts-->
-    <h1>DEV 101</h1>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-    </ul>
+    <div class = "navbar">
+        <nav>
+            <h1>DEV 101</h1>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+        </nav>
+    </div>
     <!--First Part ends-->
 
     <!--Second Part starts-->
