--- a/Webpage 1st/index.html
+++ b/Webpage 1st/index.html
@@ -27,7 +27,7 @@
     <!--Second Part end-->
 
     <!--Third part starts-->
-    <div>
+    <div class = "skills">
         <div>
             <img src = "images/html.png">
             <h2>HTML</h2>
