--- a/Webpage 1st/index.html
+++ b/Webpage 1st/index.html
@@ -12,22 +12,22 @@
         <nav>
             <h1>DEV 101</h1>
             <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
+                <a href = "#scroll"><li>HTML</li></a>
+                <a href = "#scroll"><li>CSS</li></a>
+                <a href = "#scroll"><li>Javascript</li></a>
             </ul>
         </nav>
     </div>
     <!--First Part ends-->
 
     <!--Second Part starts-->
-    <div class = "welcomeimage">
+    <div class = "welcomeImage">
         <img src = "images/lab.jpg" alt = "blackboard coffee camera">
     </div>
     <!--Second Part end-->
 
     <!--Third part starts-->
-    <div class = "skills">
+    <div class = "skills" id = "scroll">
         <div>
             <img src = "images/html.png">
             <h2>HTML</h2>
